--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+95
+version: 1.0.0+96
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -27,6 +27,8 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+dependency_overrides:
+  http: ^1.0.0
 dependencies:
   flutter:
     sdk: flutter
@@ -83,7 +85,11 @@ dependencies:
   shimmer: ^3.0.0
   flutter_image_compress: ^2.4.0
   font_awesome_flutter: ^10.8.0
-
+  flutter_cache_manager: ^3.4.1
+  video_compress: ^3.1.0
+  http: ^1.0.0
+  visibility_detector: ^0.4.0+2
+  google_maps_webservice: ^0.0.20-nullsafety.5
 
 dev_dependencies:
   flutter_test:
