--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+96
+version: 1.0.0+100
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -90,6 +90,8 @@ dependencies:
   http: ^1.0.0
   visibility_detector: ^0.4.0+2
   google_maps_webservice: ^0.0.20-nullsafety.5
+  flutter_cached_pdfview: ^0.4.3
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
