latest update customer

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+100
+version: 1.0.0+105
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -92,6 +92,7 @@ dependencies:
   google_maps_webservice: ^0.0.20-nullsafety.5
   flutter_cached_pdfview: ^0.4.3
   dio: ^5.4.0
+  reorderables: ^0.6.0
 
 dev_dependencies:
   flutter_test:
