--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+105
+version: 1.0.0+107
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -93,6 +93,7 @@ dependencies:
   flutter_cached_pdfview: ^0.4.3
   dio: ^5.4.0
   reorderables: ^0.6.0
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
