--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+107
+version: 1.0.0+109
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -94,6 +94,7 @@ dependencies:
   dio: ^5.4.0
   reorderables: ^0.6.0
   photo_view: ^0.15.0
+  material_design_icons_flutter: ^7.0.7296
 
 dev_dependencies:
   flutter_test:
