--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,17 +1,7 @@
-buildscript {
-    ext.kotlin_version = '1.9.10'
-    repositories {
-        google()
-        mavenCentral()
-    }
+// Top-level build file for the Android part of a Flutter app.
+// IMPORTANT: Do NOT declare com.android.* or kotlin plugin versions here;
+// Flutter already provides them on the classpath.
 
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.15'
-
-    }
-}
 allprojects {
     repositories {
         google()
@@ -20,10 +10,10 @@ allprojects {
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
+    // Keep this for legacy ordering needs
     project.evaluationDependsOn(":app")
 }
 
