--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,26 +1,19 @@
 plugins {
+    // Order matters: Android first, then Kotlin, then Flutter, then Google services
     id "com.android.application"
-    id "kotlin-android"
+    id "org.jetbrains.kotlin.android"
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.gms.google-services"
 }
 
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader('UTF-8') { reader ->
-        localProperties.load(reader)
-    }
+    localPropertiesFile.withReader('UTF-8') { reader -> localProperties.load(reader) }
 }
 
-def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
-if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
-}
-
-def flutterVersionName = localProperties.getProperty('flutter.versionName')
-if (flutterVersionName == null) {
-    flutterVersionName = '1.0'
-}
+def flutterVersionCode = localProperties.getProperty('flutter.versionCode') ?: '1'
+def flutterVersionName = localProperties.getProperty('flutter.versionName') ?: '1.0'
 
 def keystoreProperties = new Properties()
 def keystorePropertiesFile = rootProject.file('key.properties')
@@ -30,26 +23,31 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     namespace "com.example.daimond_host_provider"
-    compileSdk 35 // Update if necessary
-    ndkVersion "21.1.6352462" // Replace if you need a different NDK version
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
+    // Modern SDK levels
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.diamond_booking"
         minSdkVersion 25
-        targetSdkVersion 35 // Update if needed
+        targetSdkVersion 36
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
     }
+
+    // AGP 8.x requires JDK 17
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
+    }
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+
+    // NDK (optional; keep if you need it)
+//    ndkVersion "26.1.10909125"
 
     signingConfigs {
         release {
@@ -61,17 +59,14 @@ android {
     }
 
     buildTypes {
-//        debug {
-//            buildConfigField "String", "GOOGLE_MAPS_API_KEY", "\"${project.ext.googleMapsApiKey}\""
-//        }
+        // debug { }
         release {
             signingConfig signingConfigs.release
-            minifyEnabled false // Set to true if you want to enable code shrinking
-            shrinkResources false // Set to true only if minifyEnabled is true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -83,10 +78,13 @@ flutter {
 }
 
 dependencies {
+    // Keep your existing deps (bump later if needed)
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
-    implementation platform('com.google.firebase:firebase-bom:32.8.1')
-    // Add other dependencies here if required
-}
 
-apply plugin: 'com.google.gms.google-services'
+    // Firebase via BoM
+    implementation platform('com.google.firebase:firebase-bom:32.8.1')
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.1.2"
+    // e.g.:
+    // implementation 'com.google.firebase:firebase-analytics'
+}
