--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,11 +1,8 @@
 pluginManagement {
-    def flutterSdkPath = {
-        def properties = new Properties()
-        file("local.properties").withInputStream { properties.load(it) }
-        def flutterSdkPath = properties.getProperty("flutter.sdk")
-        assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
-        return flutterSdkPath
-    }()
+    def props = new Properties()
+    file("local.properties").withInputStream { props.load(it) }
+    def flutterSdkPath = props.getProperty("flutter.sdk")
+    assert flutterSdkPath != null : "flutter.sdk not set in local.properties"
 
     includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
 
@@ -18,8 +15,12 @@ pluginManagement {
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "8.1.0" apply false
-    id "org.jetbrains.kotlin.android" version "1.8.22" apply false
+
+    // ⬇️ Update these two lines:
+    id "com.android.application" version "8.7.2" apply false
+    id "org.jetbrains.kotlin.android" version "2.1.0" apply false
+
+    id "com.google.gms.google-services" version "4.4.2" apply false
 }
 
 include ":app"
