--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+111
+version: 1.0.0+112
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -50,7 +50,7 @@ dependencies:
   intl_phone_number_input: ^0.7.4
   icons_plus: ^5.0.0
   intl_phone_field: ^3.2.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   badges: ^3.1.2
   sizer: ^2.0.15
   shared_preferences: ^2.3.2
@@ -66,10 +66,10 @@ dependencies:
   lottie: ^3.1.3
   timeago: ^3.7.0
   video_player: ^2.9.2
-  fluttertoast: ^8.2.8
+  fluttertoast: ^9.0.0
   glassmorphism: ^3.0.0
   csc_picker: ^0.2.7
-  sms_autofill: ^2.4.0
+  sms_autofill: ^2.4.1
   firebase_messaging: ^15.1.3
   google_maps_flutter: ^2.10.0
   geolocator: ^11.0.0
@@ -95,6 +95,8 @@ dependencies:
   reorderables: ^0.6.0
   photo_view: ^0.15.0
   material_design_icons_flutter: ^7.0.7296
+  flutter_html: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
