--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,42 +1,52 @@
 plugins {
-    // Order matters: Android first, then Kotlin, then Flutter, then Google services
+    // Order matters
     id "com.android.application"
     id "org.jetbrains.kotlin.android"
     id "dev.flutter.flutter-gradle-plugin"
     id "com.google.gms.google-services"
 }
 
+import java.util.Properties
+import java.io.FileInputStream
+
+// read flutter version info
 def localProperties = new Properties()
-def localPropertiesFile = rootProject.file('local.properties')
+def localPropertiesFile = rootProject.file("local.properties")
 if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader('UTF-8') { reader -> localProperties.load(reader) }
+    localPropertiesFile.withReader("UTF-8") { reader -> localProperties.load(reader) }
 }
+def flutterVersionCode = localProperties.getProperty("flutter.versionCode") ?: "1"
+def flutterVersionName = localProperties.getProperty("flutter.versionName") ?: "1.0"
 
-def flutterVersionCode = localProperties.getProperty('flutter.versionCode') ?: '1'
-def flutterVersionName = localProperties.getProperty('flutter.versionName') ?: '1.0'
-
+// keystore
 def keystoreProperties = new Properties()
-def keystorePropertiesFile = rootProject.file('key.properties')
+def keystorePropertiesFile = rootProject.file("key.properties")
 if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
 android {
+    // make namespace match the app id family
     namespace "com.example.daimond_host_provider"
 
-    // Modern SDK levels
+    // you’re already on 36 → that’s >= the Play warning (API 35)
     compileSdk 36
+
+    // for 16 KB page-size requirement, pin to newer NDK
+    ndkVersion "27.0.12077973"
 
     defaultConfig {
         applicationId "com.diamond_booking"
-        minSdkVersion 25
-        targetSdkVersion 36
-        versionCode flutterVersionCode.toInteger()
+        minSdk 25
+        targetSdk 36    // satisfies "must target Android 15 (API 35) or higher"
+
+        // you hard-coded 5, keep it; or switch back to flutterVersionCode
+        versionCode 120
         versionName flutterVersionName
+
         multiDexEnabled true
     }
 
-    // AGP 8.x requires JDK 17
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
@@ -46,30 +56,33 @@ android {
         jvmTarget = "17"
     }
 
-    // NDK (optional; keep if you need it)
-//    ndkVersion "26.1.10909125"
-
     signingConfigs {
         release {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-            storePassword keystoreProperties['storePassword']
+            if (keystorePropertiesFile.exists()) {
+                keyAlias keystoreProperties["keyAlias"]
+                keyPassword keystoreProperties["keyPassword"]
+                storeFile keystoreProperties["storeFile"] ? file(keystoreProperties["storeFile"]) : null
+                storePassword keystoreProperties["storePassword"]
+            } else {
+                initWith signingConfigs.debug
+            }
         }
     }
 
     buildTypes {
-        // debug { }
         release {
             signingConfig signingConfigs.release
             minifyEnabled false
             shrinkResources false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+        }
+        debug {
+            // default
         }
     }
 
     sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
+        main.java.srcDirs += "src/main/kotlin"
     }
 }
 
@@ -78,13 +91,11 @@ flutter {
 }
 
 dependencies {
-    // Keep your existing deps (bump later if needed)
-    implementation 'androidx.browser:browser:1.3.0'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation "androidx.browser:browser:1.3.0"
+    implementation "com.google.android.gms:play-services-auth:19.0.0"
 
-    // Firebase via BoM
-    implementation platform('com.google.firebase:firebase-bom:32.8.1')
+    // Firebase BOM
+    implementation platform("com.google.firebase:firebase-bom:32.8.1")
+
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.1.2"
-    // e.g.:
-    // implementation 'com.google.firebase:firebase-analytics'
 }
