--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ dependencies:
   photo_view: ^0.15.0
   material_design_icons_flutter: ^7.0.7296
   flutter_html: ^3.0.0
+  geocoding: ^4.0.0
 
 
 dev_dependencies:
